Compile Scripts as module