@@ -4,12 +4,17 @@ import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
 import javax.tools.*;
+import java.io.IOException;
 import java.io.StringWriter;
 import java.io.Writer;
+import java.lang.module.ModuleFinder;
+import java.lang.module.ModuleReader;
+import java.lang.module.ModuleReference;
 import java.nio.charset.Charset;
+import java.nio.file.Files;
 import java.nio.file.Path;
-import java.util.List;
-import java.util.Locale;
+import java.util.*;
+import java.util.stream.Collectors;
 
 import static java.util.Objects.nonNull;
 
@@ -20,24 +25,26 @@ public class Compiler {
     private static final DiagnosticListener<JavaFileObject> listener = new DefaultDiagnosticListener();
 
     private final StandardJavaFileManager fileManager =  javac.getStandardFileManager(listener, Locale.getDefault(), Charset.defaultCharset());
-    private final MemoryClassLoader memClassLoader = new MemoryClassLoader();
-    private final MemoryJavaFileManager memFileManager = new MemoryJavaFileManager(fileManager, memClassLoader);
+    private final MemoryJavaFileManager memFileManager = new MemoryJavaFileManager(fileManager);
 
-    public boolean compile(Path... files) {
-        List<String> options =  List.of("--module-path", System.getProperty("jdk.module.path"));
+    public boolean compile(Path source, Path destination, String... options) throws IOException {
+        Files.createDirectories(destination);
+        var sources = Files.walk(source).filter(file -> file.toString().endsWith(".java")).collect(Collectors.toList());
+        fileManager.setLocation(StandardLocation.CLASS_PATH, Collections.emptyList());
+        fileManager.setLocationFromPaths(StandardLocation.CLASS_OUTPUT,  Collections.singletonList(destination));
+
         Writer writer = new StringWriter();
-        JavaCompiler.CompilationTask compile = javac.getTask(writer, memFileManager, listener, options, null, fileManager.getJavaFileObjects(files));
+        JavaCompiler.CompilationTask compile = javac.getTask(writer, memFileManager, listener, Arrays.asList(options), null, fileManager.getJavaFileObjectsFromPaths(sources));
 
         if(compile.call())
             return true;
 
         LOGGER.warn(writer.toString());
-
         return false;
     }
 
-    public MemoryClassLoader getClassLoader() {
-        return memClassLoader;
+    public Set<String> getLoadedClasses() {
+        return memFileManager.getLoadedClasses();
     }
 
     private static class DefaultDiagnosticListener implements DiagnosticListener<JavaFileObject> {
